--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".DestinationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_destination"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:listitem="@layout/item_cardview_destination"/>
 
 </FrameLayout>
