--- a/app/src/main/res/layout/fragment_phone.xml
+++ b/app/src/main/res/layout/fragment_phone.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhoneFragment">
+    tools:context=".Fragment.PhoneFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
