--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/nav_favourite"
             android:icon="@drawable/ic_menu_favourite"
-            android:title="Favourite"
+            android:title="Favourite Place"
             />
         <item
             android:id="@+id/nav_airport"
