Menambah Fragment Ampera Menambah Fitur Event 2008

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,11 @@
             android:icon="@drawable/ic_menu_taxi"
             android:title="Taxi"
             />
+        <item
+            android:id="@+id/nav_event"
+            android:icon="@drawable/ic_menu_event"
+            android:title="Event 2008"
+            />
     </group>
 
     <item android:title="Communicate">
