--- a/app/src/main/res/layout/fragment_ampera.xml
+++ b/app/src/main/res/layout/fragment_ampera.xml
@@ -11,55 +11,34 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view"
+            android:id="@+id/cv_ampera1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_marginBottom="10dp"
+            card_view:cardCornerRadius="4dp">
+
+            <ImageView
+                android:id="@+id/imgview_ampera"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ampera_bridge" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/cv_ampera2"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             card_view:cardCornerRadius="4dp">
 
             <TextView
                 android:id="@+id/info_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Keterangan Ampera" />
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view2"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            card_view:cardCornerRadius="4dp">
-
-            <TextView
-                android:id="@+id/info_text2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Keterangan Ampera" />
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view3"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            card_view:cardCornerRadius="4dp">
-
-            <TextView
-                android:id="@+id/info_text3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Keterangan Ampera" />
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view4"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            card_view:cardCornerRadius="4dp">
-
-            <TextView
-                android:id="@+id/info_text4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Keterangan Ampera" />
+                android:padding="10dp"
+                android:textSize="18dp"
+                android:typeface="sans"
+                android:text="@string/deskripsi_ampera" />
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
