--- a/app/src/main/res/layout/item_cardview_destination.xml
+++ b/app/src/main/res/layout/item_cardview_destination.xml
@@ -42,6 +42,9 @@
             android:id="@+id/tv_item_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="4"
+            android:ellipsize="end"
+            android:singleLine="false"
             tools:text="Description"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="@dimen/activity_vertical_margin"
