--- a/app/src/main/res/layout/fragment_ampera.xml
+++ b/app/src/main/res/layout/fragment_ampera.xml
@@ -14,7 +14,7 @@
             android:id="@+id/cv_ampera1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginBottom="10dp"
+            android:layout_margin="5dp"
             card_view:cardCornerRadius="4dp">
 
             <ImageView
@@ -26,7 +26,7 @@
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/cv_ampera2"
-            android:layout_marginBottom="10dp"
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="4dp">
