--- a/app/src/main/res/layout/fragment_water_tower.xml
+++ b/app/src/main/res/layout/fragment_water_tower.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JakabaringFragment">
+    tools:context=".WaterTowerFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,21 +11,21 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/cv_jakabaring1"
+            android:id="@+id/cv_watertower1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="5dp"
             card_view:cardCornerRadius="4dp">
 
             <ImageView
-                android:id="@+id/imgview_jakabaring"
+                android:id="@+id/imgview_watertower"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@mipmap/jakabaring" />
+                android:src="@mipmap/kantor_ledeng" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/cv_jakabaring2"
+            android:id="@+id/cv_watertower2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp"
-                android:text="@string/deskripsi_jakabaring"
+                android:text="@string/deskripsi_water_tower"
                 android:textSize="18dp"
                 android:typeface="sans" />
         </android.support.v7.widget.CardView>
