Mengisi beberapa daerah (Empat Lawang dan Banyuasing)

--- a/app/src/main/res/layout/fragment_market16_ilir.xml
+++ b/app/src/main/res/layout/fragment_market16_ilir.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Market16IlirFragment">
+    tools:context=".Fragment.Market16IlirFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
