--- a/app/src/main/res/layout/fragment_tujuh_panggung.xml
+++ b/app/src/main/res/layout/fragment_tujuh_panggung.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.MonperaFragment">
+    tools:context=".TujuhPanggungFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,21 +11,21 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/cv_monpera1"
+            android:id="@+id/cv_tujuhpanggung1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="5dp"
             card_view:cardCornerRadius="4dp">
 
             <ImageView
-                android:id="@+id/imgview_monpera"
+                android:id="@+id/imgview_tujuhpanggung"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@mipmap/monpera" />
+                android:src="@mipmap/tujuh_panggung" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/cv_monpera2"
+            android:id="@+id/cv_tujuhpanggung2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp"
-                android:text="@string/deskripsi_monpera"
+                android:text="@string/deskripsi_tujuh_panggung_waterfall"
                 android:textSize="18dp"
                 android:typeface="sans" />
         </android.support.v7.widget.CardView>
