tambah keterangan di beberapa lokasi

--- a/app/src/main/res/layout/fragment_okut.xml
+++ b/app/src/main/res/layout/fragment_okut.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OkutFragment">
+    tools:context=".Fragment.OkutFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_destination"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:listitem="@layout/item_cardview_destination"/>
 
 </FrameLayout>
