--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.DestinationFragment">
+    tools:context=".EventFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_destination"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_cardview_destination"/>
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
