--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,7 +31,7 @@
         <item
             android:id="@+id/nav_transportation"
             android:icon="@drawable/ic_menu_transportation"
-            android:title="Taxi"
+            android:title="Transportation"
             />
         <item
             android:id="@+id/nav_hotel"
